Fixed disappearing collapse arrow on mobile

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -74,14 +74,6 @@
     #selectorboxcontent { max-height:97%;}
     .bank li.item a {float:right; color:#fff; margin-right:1.6em;}
     img.bank-item-img { display:block; height: 1.6em; width:auto;}
-    a.staticLayers {
-        background: -moz-linear-gradient(top,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.7) 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.5)), color-stop(50%,rgba(0,0,0,0.6)), color-stop(100%,rgba(0,0,0,0.7)));
-        background: -webkit-linear-gradient(top,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.6) 50%,rgba(0,0,0,0.7) 100%);
-        background: -o-linear-gradient(top,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.6) 50%,rgba(0,0,0,0.7) 100%);
-        background: -ms-linear-gradient(top,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.6) 50%,rgba(0,0,0,0.7) 100%);
-        background: linear-gradient(to bottom,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.6) 50%,rgba(0,0,0,0.7) 100%);
-    }
     #productsHolder li.third {
         display:none;
     }
